recode addons process